--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -240,6 +240,7 @@ main div a img{
 	.menu__img{
 		background-position: center;
 		background-repeat: no-repeat;
+		background-size: cover;
 		margin: -15px;
 		border: $border2px;
 		transition: all 100ms;
@@ -433,6 +434,7 @@ main div a img{
 	.menu__img{
 		background-position: center;
 		background-repeat: no-repeat;
+		background-size: cover;
 		margin: -15px;
 		border: $border2px;
 		transition: all 100ms;
@@ -741,15 +743,6 @@ dl, ol, ul{
 		.contenedorImg img{
 			max-width: 325px
 		}
-		.seleccionMenuGrid{
-			grid-template-columns: repeat(1, 1fr);
-			grid-template-rows: repeat(4, 1fr);
-			margin: 0px 0px 20px 0px;
-			width: 100%;
-			a{
-				padding: 10px 0px 10px 0px;
-			}
-		}
 		.menuGrid10rows{
 			width: 100%;
 			grid-template-columns: repeat(2, 1fr);
@@ -763,77 +756,185 @@ dl, ol, ul{
 					grid-column-end: 3;
 					grid-row-start: 1;
 					grid-row-end: 4;
+					background-image: url(../media/papas_mob.jpg);
 				}
 				&.menu__img--acomp2{
 					grid-column-start: 1;
 					grid-column-end: 3;
 					grid-row-start: 5;
 					grid-row-end: 8;
+					background-image: url(../media/papasCheddar_mob.jpg);
 				}
 				&.menu__img--acomp3{
 					grid-column-start: 1;
 					grid-column-end: 3;
 					grid-row-start: 9;
 					grid-row-end: 12;
+					background-image: url(../media/aros_mob.jpg);
 				}
 				&.menu__img--acomp4{
 					grid-column-start: 1;
 					grid-column-end: 3;
 					grid-row-start: 13;
 					grid-row-end: 16;
+					background-image: url(../media/nuggets_mob.jpg);
 				}
 			}
 		}
-		.menu__nombre{
-			&.menu__nombre--acomp1{
-				grid-column-start: 1;
-				grid-column-end: 3;
-				grid-row-start: 4;
-				grid-row-end: 5;
-			}
-			&.menu__nombre--acomp2{
-				grid-column-start: 1;
-				grid-column-end: 3;
-				grid-row-start: 8;
-				grid-row-end: 9;
-			}
-			&.menu__nombre--acomp3{
-				grid-column-start: 1;
-				grid-column-end: 3;
-				grid-row-start: 12;
-				grid-row-end: 13;
-			}
-			&.menu__nombre--acomp4{
-				grid-column-start: 1;
-				grid-column-end: 3;
-				grid-row-start: 16;
-				grid-row-end: 17;
-			}
-
-
-
-
-
-		}
 		.menuGrid15rows{
-			width: 100%;
-			grid-template-columns: repeat(2, 1fr);
-			grid-template-rows: repeat()
-		}
-		.formulario{
-			width: 95%;
-			.field{
-				width: 100%;
-			}
-			.btn{
-				width: 100%;
+			display: grid;
+			grid-template-columns: repeat(1, 1fr);
+			grid-template-rows: repeat(30, 10fr);
+			height: 330vh;
+			padding: 60px 60px 0px 60px;
+			margin: 15px 5px 0px 5px;
+			.menu__img{
+				&.menu__img--burger1{
+					grid-column-start: 1;
+					grid-column-end: 2;
+					grid-row-start: 1;
+					grid-row-end: 5;
+					background-image: url(../media/burgerCheddar_mob.jpg);
+				}
+				&.menu__img--burger2{
+					grid-column-start: 2;
+					grid-column-end: 3;
+					grid-row-start: 6;
+					grid-row-end: 10;
+					background-image: url(../media/burgerAmericana_mob.jpg);
+				}
+				&.menu__img--burger3{
+					grid-column-start: 1;
+					grid-column-end: 2;
+					grid-row-start: 11;
+					grid-row-end: 15;
+					background-image: url(../media/burgerJamon_mob.jpg);
+				}
+				&.menu__img--burger4{
+					grid-column-start: 2;
+					grid-column-end: 3;
+					grid-row-start: 16;
+					grid-row-end: 20;
+					background-image: url(../media/burgerBanada_mob.jpg);
+				}
+				&.menu__img--burger5{
+					grid-column-start: 1;
+					grid-column-end: 2;
+					grid-row-start: 21;
+					grid-row-end: 25;
+					background-image: url(../media/burgerCriolla_mob.jpg);
+				}
+				&.menu__img--burger6{
+					grid-column-start: 2;
+					grid-column-end: 3;
+					grid-row-start: 26;
+					grid-row-end: 30;
+					background-image: url(../media/burgerVeggie_mob.jpg);
+				}
+				&.menu__img--bebida1{
+					grid-column-start: 1;
+					grid-column-end: 2;
+					grid-row-start: 1;
+					grid-row-end: 5;
+					background-image: url(../media/pepsi_mob.jpg);
+				}
+				&.menu__img--bebida2{
+					grid-column-start: 2;
+					grid-column-end: 3;
+					grid-row-start: 6;
+					grid-row-end: 10;
+					background-image: url(../media/sprite_mob.jpg);
+				}
+				&.menu__img--bebida3{
+					grid-column-start: 1;
+					grid-column-end: 2;
+					grid-row-start: 11;
+					grid-row-end: 15;
+					background-image: url(../media/fanta_mob.jpg);
+				}
+				&.menu__img--bebida4{
+					grid-column-start: 2;
+					grid-column-end: 3;
+					grid-row-start: 16;
+					grid-row-end: 20;
+					background-image: url(../media/toros_mob.jpg);
+				}
+				&.menu__img--bebida5{
+					grid-column-start: 1;
+					grid-column-end: 2;
+					grid-row-start: 21;
+					grid-row-end: 25;
+					background-image: url(../media/aguagas_mob.jpg);
+				}
+				&.menu__img--bebida6{
+					grid-column-start: 2;
+					grid-column-end: 3;
+					grid-row-start: 26;
+					grid-row-end: 30;
+					background-image: url(../media/aquarius_mob.jpg);
+				}
+				&.menu__img--beer1{
+					grid-column-start: 1;
+					grid-column-end: 2;
+					grid-row-start: 1;
+					grid-row-end: 5;
+					background-image: url(../media/honey_mob.jpg);
+				}
+				&.menu__img--beer2{
+					grid-column-start: 2;
+					grid-column-end: 3;
+					grid-row-start: 6;
+					grid-row-end: 10;
+					background-image: url(../media/golden_mob.jpg);
+				}
+				&.menu__img--beer3{
+					grid-column-start: 1;
+					grid-column-end: 2;
+					grid-row-start: 11;
+					grid-row-end: 15;
+					background-image: url(../media/ipa_mob.jpg);
+				}
+				&.menu__img--beer4{
+					grid-column-start: 2;
+					grid-column-end: 3;
+					grid-row-start: 16;
+					grid-row-end: 20;
+					background-image: url(../media/apa_mob.jpg);
+				}
+				&.menu__img--beer5{
+					grid-column-start: 1;
+					grid-column-end: 2;
+					grid-row-start: 21;
+					grid-row-end: 25;
+					background-image: url(../media/stout_mob.jpg);
+				}
+				&.menu__img--beer6{
+					grid-column-start: 2;
+					grid-column-end: 3;
+					grid-row-start: 26;
+					grid-row-end: 30;
+					background-image: url(../media/redirish_mob.jpg);
+				}
 			}
 		}
 	}
+.formulario{
+	width: 95%;
+	.field{
+		width: 100%;
+	}
+	.btn{
+		width: 100%;
+	}
+}
+
+
+
+
+}
 	.redes{
 		width: 45%;
 	}
-}
 @media all and (max-width: 768px) and (min-width: 577px){
 	header nav.navbar div#navbarNav ul.navbar-nav li.nav-item a.nav-link{
 		font-size: 0.95rem;
@@ -876,6 +977,7 @@ dl, ol, ul{
 	.redes{
 		width: 74%;
 	}
+
 }
 
 
@@ -936,10 +1038,306 @@ dl, ol, ul{
 				}
 			}
 		}
+		.seleccionMenuGrid{
+			grid-template-columns: repeat(1, 1fr);
+			grid-template-rows: repeat(4, 1fr);
+			margin: 0px 0px 20px 0px;
+			width: 100%;
+			a{
+				padding: 10px 0px 10px 0px;
+			}
+		}
+		.menuGrid10rows{
+			width: 100%;
+			grid-template-columns: repeat(2, 1fr);
+			grid-template-rows: repeat(20, 1fr);
+			margin: 0px 0px 0px 0px;
+			padding: 15px 5px 0px 5px;
+			height: 230vh;
+			.menu__img{
+				margin: 0px;
+				&.menu__img--acomp1{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 1;
+					grid-row-end: 5;
+				}
+				&.menu__img--acomp2{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 6;
+					grid-row-end: 10;
+				}
+				&.menu__img--acomp3{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 11;
+					grid-row-end: 15;
+				}
+				&.menu__img--acomp4{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 16;
+					grid-row-end: 20;
+				}
+			}
+		}
+		.menu__nombre{
+			text-align: center;
+			&.menu__nombre--acomp1{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 5;
+				grid-row-end: 6;
+			}
+			&.menu__nombre--acomp2{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 10;
+				grid-row-end: 11;
+			}
+			&.menu__nombre--acomp3{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 15;
+				grid-row-end: 16;
+			}
+			&.menu__nombre--acomp4{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 20;
+				grid-row-end: 21;
+			}
+			&.menu__nombre--bebida1{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 5;
+				grid-row-end: 6;
+			}
+			&.menu__nombre--bebida2{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 10;
+				grid-row-end: 11;
+			}
+			&.menu__nombre--bebida3{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 15;
+				grid-row-end: 16;
+			}
+			&.menu__nombre--bebida4{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 20;
+				grid-row-end: 21;
+			}
+			&.menu__nombre--bebida5{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 25;
+				grid-row-end: 26;
+			}
+			&.menu__nombre--bebida6{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 30;
+				grid-row-end: 31;
+			}
+			&.menu__nombre--beer1{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 5;
+				grid-row-end: 6;
+			}
+			&.menu__nombre--beer2{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 10;
+				grid-row-end: 11;
+			}
+			&.menu__nombre--beer3{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 15;
+				grid-row-end: 16;
+			}
+			&.menu__nombre--beer4{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 20;
+				grid-row-end: 21;
+			}
+			&.menu__nombre--beer5{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 25;
+				grid-row-end: 26;
+			}
+			&.menu__nombre--beer6{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 30;
+				grid-row-end: 31;
+			}
+			&.menu__nombre--burger1{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 5;
+				grid-row-end: 6;
+			}
+			&.menu__nombre--burger2{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 10;
+				grid-row-end: 11;
+			}
+			&.menu__nombre--burger3{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 15;
+				grid-row-end: 16;
+			}
+			&.menu__nombre--burger4{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 20;
+				grid-row-end: 21;
+			}
+			&.menu__nombre--burger5{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 25;
+				grid-row-end: 26;
+			}
+			&.menu__nombre--burger6{
+				grid-column-start: 1;
+				grid-column-end: 3;
+				grid-row-start: 30;
+				grid-row-end: 31;
+			}
+
+		}
+		.menuGrid15rows{
+			width: 100%;
+			grid-template-columns: repeat(2, 1fr);
+			grid-template-rows: repeat(30, 1fr);
+			margin: 0px 0px 0px 0px;
+			padding: 15px 5px 0px 5px;
+			height: 330vh;
+			.menu__img{
+				margin: 0px;
+				&.menu__img--burger1{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 1;
+					grid-row-end: 5;
+				}
+				&.menu__img--burger2{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 6;
+					grid-row-end: 10;
+				}
+				&.menu__img--burger3{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 11;
+					grid-row-end: 15;
+				}
+				&.menu__img--burger4{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 16;
+					grid-row-end: 20;
+				}
+				&.menu__img--burger5{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 21;
+					grid-row-end: 25;
+				}
+				&.menu__img--burger6{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 26;
+					grid-row-end: 30;
+				}
+				&.menu__img--bebida1{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 1;
+					grid-row-end: 5;
+				}
+				&.menu__img--bebida2{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 6;
+					grid-row-end: 10;
+				}
+				&.menu__img--bebida3{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 11;
+					grid-row-end: 15;
+				}
+				&.menu__img--bebida4{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 16;
+					grid-row-end: 20;
+				}
+				&.menu__img--bebida5{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 21;
+					grid-row-end: 25;
+				}
+				&.menu__img--bebida6{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 26;
+					grid-row-end: 30;
+				}
+				&.menu__img--beer1{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 1;
+					grid-row-end: 5;
+				}
+				&.menu__img--beer2{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 6;
+					grid-row-end: 10;
+				}
+				&.menu__img--beer3{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 11;
+					grid-row-end: 15;
+				}
+				&.menu__img--beer4{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 16;
+					grid-row-end: 20;
+				}
+				&.menu__img--beer5{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 21;
+					grid-row-end: 25;
+				}
+				&.menu__img--beer6{
+					grid-column-start: 1;
+					grid-column-end: 3;
+					grid-row-start: 26;
+					grid-row-end: 30;
+				}
+			}
+		}
 	}
-	
-
-
 	#footer{
 		padding: 20px 0 20px 20px;
 			.footerButtons ul li{
